gherkin-runner/gherkinRunner.css
a:hover {
    text-decoration: none !important;
}

.inline {
    display: inline-block;
}

#gherkin-ui {
    margin: 2em;
}

#uitestwindow {
    display: block;
    position: absolute;
    top: 0px;
    left: 0px;
    background-color: white;
    right: 0px;
    bottom: 0px;
    z-index: 100;
    border: 0px;
    width: 100%;
    height: 100%;
}

#gherkin-counts {
    display: block;
    position: absolute;
    top: 0px;
    left: 0px;
    background-color: white;
    z-index: 1000;
    margin: 1em;
}

    #gherkin-counts.right {
        top: 0px;
        left: auto;
        right: 0px;
    }

#gherkin-toggle-ui-button {
    position: absolute;
    right: 1em;
    top: 1em;
    z-index: 1000;
}

    #gherkin-toggle-ui-button.left {
        position: absolute;
        left: 0;
        right: auto;
        top: 0;
        margin: 1em;
        z-index: 1000;
    }

#details {
    position: absolute;
    top: 15em;
    left: 1.5em;
    right: 1.5em;   
}

#break-on-exception {
    position: absolute;
    top: 13em;
}

.faded {
    opacity: .5;
}

    .faded:hover {
        opacity: 1;
    }

.action-buttons {
    margin-top: 4em;
}

.table-very-condensed {
    line-height: 10px;
    width: auto;
    margin: 0;
}

.hover-highlighted {
    border-radius: 3px;
    border: 1px solid white;
}

.icons {
    display: inline-block;
    vertical-align: middle;
}

.icon-column {
    display: inline-block;
    width: 1em;
    vertical-align: top;
}

.name {
    display: inline-block;
}

.step .name {
    margin-left: 2em;
    width: 85%
}

.substep .name {
    margin-left: 4em;
}

.step.example .name {
    margin-left: 5.5em;
}

span.step-group {
  font-weight: bold;
}

.substep.example .name {
    margin-left: 7.5em;
}

.step-group .icons {
    width: 6.15em;
}

.feature .section-title {
    margin-left: 6em;
    font-weight: bold;
}

.feature .feature-description {
    margin-left: 8em;
}

.scenario .section-title {
    margin-left: 8.5em;
    font-weight: bold;
}

.scenario .example-arg-columns {
    margin-left: 12.5em;
}

.scenario .example-arg-value {
    margin-left: 3.5em;
}

.step.outline {
  font-style: italic;
}

.step .table-arg {
    margin-left: 10.5em;
}

.step.example .table-arg {
    margin-left: 16em;
}

.hover-highlighted:hover {
    background-color: #f5f5f5;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
    border: 1px solid #e3e3e3;
}

.hover-visible {
    visibility: hidden;
}

.hover:hover .hover-visible {
    visibility: visible;
}

.table-very-condensed th {
    line-height: 10px;
}

.table-very-condensed td {
    line-height: 10px;
}

.preserve-space {
    white-space: pre;
}


.walking-level1 {
    margin-left: 2em;
}
.walking-level2 {
    margin-left: 4em;
}
.walking-level3 {
    margin-left: 6em;
}
.walking-level4 {
    margin-left: 8em;
}
.walking-level5 {
    margin-left: 10em;
}
.walking-level6 {
    margin-left: 12em;
}
.walking-level7 {
    margin-left: 14em;
}
.walking-level8 {
    margin-left: 16em;
}
.walking-level9 {
    margin-left: 18em;
}
.walking-level10 {
    margin-left: 20em;
}
.walking-level11 {
    margin-left: 22em;
}
.walking-level12 {
    margin-left: 24em;
}
.walking-level13 {
    margin-left: 26em;
}
.walking-level14 {
    margin-left: 28em;
}
.walking-level15 {
    margin-left: 30em;
}
.walking-level16 {
    margin-left: 32em;
}
.walking-level17 {
    margin-left: 34em;
}
.walking-level18 {
    margin-left: 36em;
}
.walking-level19 {
    margin-left: 38em;
}
.walking-level20 {
    margin-left: 40em;
}

#walking-selections {
    position: absolute;
    top: 1em;
    right: 1em;
}

